{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 18,
  "lineage": "07052937-7fcc-1997-9b18-6f294f7bb6d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222634379970:internet-gateway/igw-0f00f6d7bc547bf19",
            "id": "igw-0f00f6d7bc547bf19",
            "owner_id": "222634379970",
            "tags": {
              "Name": "project-igw"
            },
            "tags_all": {
              "Name": "project-igw"
            },
            "vpc_id": "vpc-03ea702bd2dfb7c3a"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222634379970:route-table/rtb-020480f2cc0a812df",
            "id": "rtb-020480f2cc0a812df",
            "owner_id": "222634379970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f00f6d7bc547bf19",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-route-table"
            },
            "tags_all": {
              "Name": "project-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ea702bd2dfb7c3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0391f1d419ed232f3",
            "route_table_id": "rtb-020480f2cc0a812df",
            "subnet_id": "subnet-0555069c16e430260"
          },
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_route_table.project_route_table",
            "aws_subnet.project_subnet",
            "aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d098689af01048d",
            "route_table_id": "rtb-020480f2cc0a812df",
            "subnet_id": "subnet-037772f62a5dfc5ef"
          },
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_route_table.project_route_table",
            "aws_subnet.project_subnet",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222634379970:security-group/sg-0c91b7c7da462fdbf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c91b7c7da462fdbf",
            "ingress": [],
            "name": "terraform-20250225124034369200000005",
            "name_prefix": "terraform-",
            "owner_id": "222634379970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-cluster-sg"
            },
            "tags_all": {
              "Name": "project-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ea702bd2dfb7c3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222634379970:security-group/sg-070c4703d73bb6e7e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070c4703d73bb6e7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250225124034371300000006",
            "name_prefix": "terraform-",
            "owner_id": "222634379970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-node-sg"
            },
            "tags_all": {
              "Name": "project-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ea702bd2dfb7c3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222634379970:subnet/subnet-0555069c16e430260",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0555069c16e430260",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "222634379970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-0"
            },
            "tags_all": {
              "Name": "project-subnet-0"
            },
            "vpc_id": "vpc-03ea702bd2dfb7c3a"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222634379970:subnet/subnet-037772f62a5dfc5ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037772f62a5dfc5ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "222634379970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-1"
            },
            "tags_all": {
              "Name": "project-subnet-1"
            },
            "vpc_id": "vpc-03ea702bd2dfb7c3a"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:222634379970:vpc/vpc-03ea702bd2dfb7c3a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0870af74179407d92",
            "default_route_table_id": "rtb-0a7f488a83b7353b1",
            "default_security_group_id": "sg-0ef0d0aef1d7383ee",
            "dhcp_options_id": "dopt-066887f47c445338e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ea702bd2dfb7c3a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a7f488a83b7353b1",
            "owner_id": "222634379970",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}